feat: refactor and fix SclReport behavior #304
Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>

refactor test code to use AssertJ and using Gherkin to define scenarios #306

Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>